# resource-server/src/main/resources/openapi_mesas.yml
@@ -15,6 +15,61 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Mesas'
+    put:
+      summary: Actualiza los datos de una mesa.
+      description: Actualiza los datos de una mesa específica en el sistema.
+      operationId: updateMesa
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Mesas'
+      responses:
+        '200':
+          description: La mesa se actualizó correctamente.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Mensaje de éxito.
+                    example: "Mesa actualizada correctamente."
+        '400':
+          description: Solicitud inválida.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Descripción del error.
+                    example: "El campo 'nombreTradicional' es obligatorio."
+        '401':
+          description: No autorizado.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Descripción del error.
+                    example: "Token inválido o expirado."
+        '500':
+          description: Error interno del servidor.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Descripción del error.
+                    example: "Ocurrió un error inesperado."
 components:
   schemas:
     Mesas:
